# Grasp_task

./: README.md
project/apriltag/: .gitignore  FK_transfer.py  Games-HomeWork.txt  PLANAR_GRASP_FLOW.md  README.md  bridge_tag_to_base.py  d455_cam.py  d455_depth_compare.py  d455_detect_and_move.py  d455_detect_and_move_qinterp.py  d455_intrinsics.py  data_0227.jsonl  fit_base_tag_from_q_and_plane.py  goto_calib_point.py  grasp.py  move_to_tag_xy.py  (+3 more)
project/apriltag/from zhaoxin/table_guidance_project_v3/: README.md  pyproject.toml  requirements.txt
project/apriltag/from zhaoxin/table_guidance_project_v3/config/: demo.yaml  example_point_pairs.json
project/apriltag/from zhaoxin/table_guidance_project_v3/scripts/: calibrate_base_from_points.py  inspect_tags.py  run_demo.py
project/apriltag/from zhaoxin/table_guidance_project_v3/src/table_guidance/: __init__.py  apriltag_backend.py  calibration.py  geom.py  pose.py  segmentation.py  types.py  viz.py
project/apriltag/from zhaoxin/table_guidance_project_v3/src/table_guidance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project/apriltag/seg_detection/table_guidance_project_v8/: .gitignore  README.md  pyproject.toml  requirements.txt
project/apriltag/seg_detection/table_guidance_project_v8/config/: point_pairs_mm.json
project/apriltag/seg_detection/table_guidance_project_v8/scripts/: calibrate_base_from_points.py  inspect_tags.py  run_demo.py  validate_transforms.py
project/apriltag/seg_detection/table_guidance_project_v8/src/table_guidance/: apriltag_backend.py  calibration.py  pose.py
(+26 files in other folders)
