[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table-guidance"
version = "0.8.0"
description = "AprilTag + FastSAM -> multi-tag least-squares plane fitting for pose-consistent tabletop guidance."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.7",
  "pyyaml>=6.0",
  "pupil-apriltags>=1.0.4",
  "ultralytics>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
